// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pagination 组件 > 快照测试 > 中间页面的快照应该匹配 1`] = `
<div>
  <div
    aria-label="分页导航"
    class="pagination-wrapper"
    role="navigation"
  >
    <button
      aria-label="上一页"
      class="btn btn-secondary"
    >
      上一页
    </button>
    <button
      aria-label="点击输入页码"
      class="pagination-page-display"
    >
      第 
      <span
        class="badge badge-slate"
      >
        5
      </span>
       / 
      10
       页
    </button>
    <button
      aria-label="下一页"
      class="btn btn-secondary"
    >
      下一页
    </button>
  </div>
</div>
`;

exports[`Pagination 组件 > 快照测试 > 最后一页的快照应该匹配 1`] = `
<div>
  <div
    aria-label="分页导航"
    class="pagination-wrapper"
    role="navigation"
  >
    <button
      aria-label="上一页"
      class="btn btn-secondary"
    >
      上一页
    </button>
    <button
      aria-label="点击输入页码"
      class="pagination-page-display"
    >
      第 
      <span
        class="badge badge-slate"
      >
        10
      </span>
       / 
      10
       页
    </button>
    <button
      aria-label="下一页"
      class="btn btn-secondary"
      disabled=""
    >
      下一页
    </button>
  </div>
</div>
`;

exports[`Pagination 组件 > 快照测试 > 第一页的快照应该匹配 1`] = `
<div>
  <div
    aria-label="分页导航"
    class="pagination-wrapper"
    role="navigation"
  >
    <button
      aria-label="上一页"
      class="btn btn-secondary"
      disabled=""
    >
      上一页
    </button>
    <button
      aria-label="点击输入页码"
      class="pagination-page-display"
    >
      第 
      <span
        class="badge badge-slate"
      >
        1
      </span>
       / 
      10
       页
    </button>
    <button
      aria-label="下一页"
      class="btn btn-secondary"
    >
      下一页
    </button>
  </div>
</div>
`;
